kubernetes/apps/api/dev/deployment_patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        version: "0.0.0"
